force-app/main/default/objects/ArcGIS_API__mdt/ArcGIS_API__mdt.object-meta.xml
<CustomObject>
    <description>Metadata Type properties for accessing the GSA GIS ArcGIS OnPrem REST services</description>
    <label>ArcGIS API</label>
    <pluralLabel>ArcGIS API</pluralLabel>
</CustomObject>