force-app/main/default/objects/ArcGIS_API__mdt/fields/GIS_Locator__c.field-meta.xml
<CustomField>
    <fullName>GIS_Locator__c</fullName>
    <label>GIS Locator</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>