force-app/main/default/objects/ArcGIS_API__mdt/fields/GIS_URL_Prefix__c.field-meta.xml
<CustomField>
    <fullName>GIS_URL_Prefix__c</fullName>
    <label>GIS URL Prefix</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>