force-app/main/default/objects/ArcGIS_API__mdt/fields/Token_Expiration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiration_Minutes__c</fullName>
    <label>Token Expiration Minutes</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>