force-app/main/default/objects/ArcGIS_API__mdt/fields/Token_Service_Timeout_Milliseconds__c.field-meta.xml
<CustomField>
    <fullName>Token_Service_Timeout_Milliseconds__c</fullName>
    <label>Token Service Timeout Milliseconds</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>