force-app/main/default/objects/ArcGIS_API__mdt/fields/Token_URI__c.field-meta.xml
<CustomField>
    <fullName>Token_URI__c</fullName>
    <label>Token URI</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>